package com.example.recipeproject;

public class Item
{
    private String text;

    public Item(String text)
    {
        this.text = text;
    }

    public String getText()
    {
        return text;
    }

}
